Tue Aug 26 07:34:16 GMT 2008  Olly Betts <olly@survex.com>

	* HACKING: Document explicitly that XAPIAN_DEBUG_FLAGS=- gives you all
	  debug messages.

Tue Aug 26 00:57:32 GMT 2008  Olly Betts <olly@survex.com>

	* bin/xapian-check.cc: Fix reversed check for whether a table is in a
	  flint or chert database.

Mon Aug 25 12:03:36 GMT 2008  Olly Betts <olly@survex.com>

	* backends/flint/flint_termlisttable.cc: Remove FIXME about dropping
	  something if we make an incompatible database version bump - that's
	  not going to happen now for flint.  Avoid packing doclen for an
	  empty termlist.  Add explicit cast for char for prev_term.size().

Sun Aug 24 11:42:21 GMT 2008  Olly Betts <olly@survex.com>

	* common/Makefile.mk: Fix build with --enable-log=profile.

Sun Aug 24 12:41:22 BST 2008  Olly Betts <olly@survex.com>

	* HACKING: Add a bit of discussion of --enable-log=profile.  Tweak
	  formatting in one place and wording in another.

Sat Aug 23 00:48:40 GMT 2008  Olly Betts <olly@survex.com>

	* tests/collate-test: Only update files which have changed to avoid
	  rebuilding all apitest's source files when only one has changed.

Fri Aug 22 01:02:57 GMT 2008  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lt: Merge upstream "Check-in Number: 5571"
	  (no code changes in our modified version).

Fri Aug 22 01:00:15 GMT 2008  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Fix comment typo.

Fri Aug 22 00:55:26 GMT 2008  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Merge upstream "Check-in Number: 5564".

Fri Aug 22 00:44:14 GMT 2008  Olly Betts <olly@survex.com>

	* queryparser/lemon.c,queryparser/queryparser.lt: Merge upstream
	  "Check-in Number: 5488" and "5563".
	* queryparser/queryparser.lt: Fix compilation for previous merge
	  (I fixed it in the generated file before!)

Fri Aug 22 00:07:22 GMT 2008  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lt: Merge upstream "Check-in Number: 5472".
